--- a/README
+++ b/README
@@ -474,6 +474,16 @@ Ubuntu:
 Fedora:
    As for Ubuntu, but note that package names are usually changed from
    "libxyz-dev" to "libXyz-devel".
+   For the new documentation build, it may be necessary to install the
+   following (at least on Fedora 20 and 21):
+   texlive-siunitx.noarch
+   texlive-titlesec.noarch
+   texlive-abstract.noarch
+   texlive-multirow.noarch
+   texlive-mdframed.noarch
+   texlive-titling.noarch
+   texlive-tocloft.noarch
+   texlive-eqparbox.noarch
 
 Arch Linux:
    base-devel
