docs: Add some document and task definitions.
These were probably removed in the switch to the new style documents.

--- a/docs/sc/020/sc20.tex
+++ b/docs/sc/020/sc20.tex
@@ -28,6 +28,17 @@
 \providecommand{\lutedit}{\xref{\task{lutedit}}{sun95}{LUTEDIT}}
 \newcommand{\acsispipelinesun}{\xref{\textbf{SUN/260}}{sun260}{}}
 
+\providecommand{\gaiasc}{\xref{\textbf{SC/17}}{sc17}{}}
+\providecommand{\splatsun}{\xref{\textbf{SUN/243}}{sun243}{}}
+
+\providecommand{\cadd}{\xref{\task{cadd}}{sun95}{CADD}}
+\providecommand{\chanmap}{\xref{\task{chanmap}}{sun95}{CHANMAP}}
+\providecommand{\contour}{\xref{\task{contour}}{sun95}{CONTOUR}}
+\providecommand{\gdstate}{\xref{\task{gdstate}}{sun95}{GDSTATE}}
+\providecommand{\mfittrend}{\xref{\task{mfittrend}}{sun95}{MFITTREND}}
+\providecommand{\nomagic}{\xref{\task{nomagic}}{sun95}{NOMAGIC}}
+\providecommand{\sqorst}{\xref{\task{sqorst}}{sun95}{SQORST}}
+
 % Frame attributes fount.
 \providecommand{\att}[1]{\textsf{#1}}
 
