latexsupport: Add definitions for SC/20.
It's not clear which packages, SUNs, and applications are sufficiently
common to warrant being in the master list.  The main packages
and their SUNs seems reasonable.  The choice of tasks is more fuzzy.
I added some more specialised tasks to SC/20.  Unless we decide to
include all or most, I would suggest removing things like \configecho
as it's probably only referenced in the one manual (SC/21).

--- a/applications/latexsupport/starabbrev.sty
+++ b/applications/latexsupport/starabbrev.sty
@@ -14,6 +14,7 @@
 \newcommand{\ccdpack}{\xref{\textsc{Ccdpack}}{sun139}{}}
 \newcommand{\convert}{\xref{\textsc{Convert}}{sun55}{}}
 \newcommand{\cupid}{\xref{\textsc{Cupid}}{sun255}{}}
+\newcommand{\datacube}{\xref{\textsc{Datacube}}{sun237}{}}
 \newcommand{\Figaro}{\xref{\textsc{Figaro}}{sun86}{}}
 \newcommand{\fluxes}{\xref{\textsc{Fluxes}}{sun213}{}}
 \newcommand{\gaia}{\xref{\textsc{Gaia}}{sun214}{}}
@@ -26,6 +27,7 @@
 \newcommand{\photom}{\xref{\textsc{Photom}}{sun45}{}}
 \newcommand{\picard}{\xref{\textsc{Picard}}{sun265}{}}
 \newcommand{\smurf}{\xref{\textsc{Smurf}}{sun258}{}}
+\newcommand{\splat}{\xref{\textsc{Splat}}{sun243}{}}
 \newcommand{\ssds}{\xref{\textsc{Starlink Standard Data Structures}}{sgp38}{}}
 \newcommand{\topcat}{\href{http://www.starlink.ac.uk/topcat}{\textsc{Topcat}}}
 
@@ -64,22 +66,30 @@
 
 % KAPPA
 \newcommand{\beamfit}{\xref{\task{beamfit}}{sun95}{BEAMFIT}}
+\newcommand{\block}{\xref{\task{block}}{sun95}{BLOCK}}
+\newcommand{\chpix}{\xref{\task{chpix}}{sun95}{CHPIX}}
+\newcommand{\cdiv}{\xref{\task{cdiv}}{sun95}{CDIV}}
 \newcommand{\cmult}{\xref{\task{cmult}}{sun95}{CMULT}}
 \newcommand{\compave}{\xref{\task{compave}}{sun95}{COMPAVE}}
 \newcommand{\configecho}{\xref{\task{configecho}}{sun95}{CONFIGECHO}}
 \newcommand{\fitslist}{\xref{\task{fitslist}}{sun95}{FITSLIST}}
 \newcommand{\fitsval}{\xref{\task{fitsval}}{sun95}{FITSVAL}}
+\newcommand{\gausmooth}{\xref{\task{gausmooth}}{sun95}{GAUSMOOTH}}
 \newcommand{\hislist}{\xref{\task{hislist}}{sun95}{HISLIST}}
 \newcommand{\histat}{\xref{\task{histat}}{sun95}{HISTAT}}
 \newcommand{\histogram}{\xref{\task{histogram}}{sun95}{HISTOGRAM}}
+\newcommand{\linplot}{\xref{\task{linplot}}{sun95}{LINPLOT}}
 \newcommand{\makesnr}{\xref{\task{makesnr}}{sun95}{MAKESNR}}
 \newcommand{\ndfcopy}{\xref{\task{ndfcopy}}{sun95}{NDFCOPY}}
 \newcommand{\ndftrace}{\xref{\task{ndftrace}}{sun95}{NDFTRACE}}
+\newcommand{\paste}{\xref{\task{paste}}{sun95}{PASTE}}
 \newcommand{\provshow}{\xref{\task{provshow}}{sun95}{PROVSHOW}}
 \newcommand{\showqual}{\xref{\task{showqual}}{sun95}{SHOWQUAL}}
 \newcommand{\setvar}{\xref{\task{setvar}}{sun95}{SETVAR}}
 \newcommand{\stats}{\xref{\task{stats}}{sun95}{STATS}}
 \newcommand{\sub}{\xref{\task{sub}}{sun95}{SUB}}
+\newcommand{\wcsattrib}{\xref{\task{wcsattrib}}{sun95}{WCSATTRIB}}
+\newcommand{\wcsframe}{\xref{\task{wcsframe}}{sun95}{WCSFRAME}}
 \newcommand{\wcsmosaic}{\xref{\task{wcsmosaic}}{sun95}{WCSMOSAIC}}
 
 % CCDPACK
@@ -95,8 +105,12 @@
 
 \newcommand{\stardocs}[2]{\href{http://docs.jach.hawaii.edu/star/#1#2.htx/#1#2.html}{\textbf{\uppercase{#1}/#2}}}
 % Documents
+\newcommand{\convertsun}{\xref{\textbf{SUN/55}}{sun55}{}}
+\newcommand{\cupidsun}{\xref{\textbf{SUN/255}}{sun255}{}}
 \newcommand{\gaiasun}{\xref{\textbf{SUN/214}}{sun214}{}}
+\newcommand{\hdstracesun}{\xref{\textbf{SUN/102}}{sun102}{}}
 \newcommand{\kappasun}{\xref{\textbf{SUN/95}}{sun95}{}}
+\newcommand{\oracdrsun}{\xref{\textbf{SUN/230}}{sun230}{}}
 \newcommand{\picardsun}{\stardocs{sun}{265}}
 \newcommand{\pipelinesun}{\xref{\textbf{SUN/264}}{sun264}{}}
 \newcommand{\smurfsun}{\xref{\textbf{SUN/258}}{sun258}{}}
