--- a/docs/sc/020/sc20.tex
+++ b/docs/sc/020/sc20.tex
@@ -185,6 +185,11 @@ a UNIX shell.
          three -dimensional visualisation, clump visualisation, photometry,
          and the ability to query and overlay on-line or local catalogues.
        & \texttt{\%\,gaia} & \gaiasun\ \gaiasc\ \\
+
+\hline
+\HDSTRACE\ & This tool lets you examine the contents of Starlink data files.
+           & \texttt{\%\,hdstrace $<$file$>$} & \hdstracesun\ \\
+
 \hline
 \splat\ & \splat\ is a graphical spectral-analysis tool. It can also
            interact with the Virtual Observatory.  & \texttt{\%\,splat}
@@ -255,7 +260,7 @@ by setting the environment variable \texttt{ADAM\_USER} to be the path
 to your alternative location. This is useful when running more than
 one reduction to avoid interference or access clashes.
 
-To see the ADAM parameters, run \hdstrace\ on any of the parameter
+To see the ADAM parameters, run \HDSTRACE\ on any of the parameter
 files. For example, to see which parameters were used and the results
 from last time you ran \stats, you can type the following from
 anywhere on your system:
@@ -282,7 +287,7 @@ STATS  <STRUC>
 \vspace{0.3cm}
 You can see \stats\ was run on the data array with ordered statistics
 as well as the resulting values. Any of the parameters returned by
-running \hdstrace\ on an ADAM file can be extracted using the command
+running \HDSTRACE\ on an ADAM file can be extracted using the command
 \task{parget}. In the example below, the mean value from the last
 instance of \task{stats} is printed to the screen.
 \begin{terminalv}
@@ -319,7 +324,7 @@ There are two \Kappa\ tasks which are extremely useful for examining
 your metadata: \fitslist\ and \ndftrace, which can be used to view the
 FITS headers and properties, such as dimensions, of the data
 respectively. The third option is the stand-alone application
-\hdstrace.
+\HDSTRACE.
 \vspace{0.7cm}\\
 \begin{minipage}[t]{0.12\linewidth}
 \textbf{fitslist}
@@ -378,7 +383,7 @@ You can see it descends two levels (into \texttt{MORE} and
 available at this level include receptors and receiver temperatures.
 
 Full details of \ndftrace\ and \fitslist\ can be found in the
-\xref{\textsc{Kappa} manual}{sun95}{}. Details on \hdstrace\ can be
+\xref{\textsc{Kappa} manual}{sun95}{}. Details on \HDSTRACE\ can be
 found in the \xref{\textsc{hdstrace} manual}{sun102}{}.
 
 \begin{tip}
@@ -561,7 +566,7 @@ spectrum in kelvins. \end{itemize}
 \begin{tip}
 Both $T_{sys}$ and $T_{rec}$ are stored in the raw data files.
 This information is stored in the .MORE.ACSIS.TSYS and .MORE.ACSIS.TRX
-extensions respectively, and can be viewed using \hdstrace\ (see
+extensions respectively, and can be viewed using \HDSTRACE\ (see
 \cref{Section}{sec:fitslist}{How can I view the metadata?}).
 \end{tip}
 
